<resources>
    <string name="app_name">CounslrApp</string>

    <!--main activity -->
    <string name="main_activity_textView_text">Already have an account? Sign In</string>
    <string name="main_activity_button_text">Let’s Get Started</string>

    <!--join activity -->
    <string name="join_activity_next">Next</string>
    <string name="join_activity_header">Join Counslr</string>
    <string name="join_activity_description">Counslr partners with colleges to provide \nmental health support to
        students.
    </string>
    <string name="join_activity_description2">Our current partnered schools</string>
    <string name="join_activity_footer">Don’t see your school?</string>

    <!--home activity -->
    <string name="home_activity_home">Home</string>
    <string name="home_activity_sessions">Sessions</string>
    <string name="home_activity_profile">Profile</string>

    <!--home fragment -->
    <string name="home_fragment_home">Hello, Dwight</string>
    <string name="home_fragment_description">What are you looking for today?</string>
    <string name="home_fragment_title_card_session">Schedule a session</string>
    <string name="home_fragment_description_card_session">Book a specific time and day \nthat works best for you.
    </string>
    <string name="home_fragment_button_card_session">Let’s Go</string>

    <string name="home_fragment_title_card_chatting">Chat Now</string>
    <string name="home_fragment_description_card_chatting">Counselors are available 24/7</string>
    <string name="home_fragment_button_card_chatting">Start Chatting</string>

    <!--session fragment -->
    <string name="session_fragment_session">Sessions</string>
    <string name="session_fragment_title_card_chatting">Phil McGraw</string>
    <string name="session_fragment_description_card_chatting">Scheduled session \n10:30 PM Today</string>
    <string name="session_fragment_button_card_chatting">Enter Session</string>
    <string name="session_fragment_past_session">Past Sessions</string>

    <!--session messages activity -->
    <string name="session_messages_activity_end_session">End Session</string>
    <string name="session_messages_activity_name">Phil MacGraw</string>
    <string name="session_messages_activity_detail">Tap for details</string>
    <string name="session_messages_activity_session_started">Your session has officially \nstarted!</string>
    <string name="session_messages_activity_session_description">You can now respond to your \ncounselor.</string>

    <!--profile fragment -->
    <string name="profile_fragment_title">Dwight Schrute</string>
    <string name="profile_fragment_description">Hunter College</string>
    <string name="profile_fragment_title_two">Additional Services</string>
    <string name="profile_fragment_description_two">Help is at your fingertips.</string>
    <string name="profile_fragment_item_1">Edit Profile</string>
    <string name="profile_fragment_item_2">My Plan</string>
    <string name="profile_fragment_item_3">FAQ</string>
    <string name="profile_fragment_item_4">Contact Support</string>
    <string name="profile_fragment_item_5">Privacy Policies</string>
    <string name="profile_fragment_item_6">Counslr for Android.1(12)</string>
    <string name="profile_fragment_logout">Log Out</string>

</resources>
