<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout

        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:paddingBottom="24dp" >


    <ImageView
            android:id="@+id/imageView_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/home_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp" />
    <TextView
            android:text="@string/home_fragment_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_title"
            android:textColor="@color/colorDark"
            android:textSize="30sp"
            android:fontFamily="@font/literata_book"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_logo"
            android:layout_marginTop="6dp"/>
    <TextView
            android:text="@string/home_fragment_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_description"
            android:textSize="18sp"
            android:textColor="@color/colorDescription"
            android:fontFamily="@font/red_hat_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_title"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/upcomming_session_card"
            android:id="@+id/imageView_card_session"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_description"/>
    <TextView
            android:text="@string/home_fragment_title_card_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_title_card_session"
            android:textSize="21sp"
            android:fontFamily="@font/literata_book"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="48dp"
            app:layout_constraintTop_toTopOf="@+id/imageView_card_session"
            android:layout_marginTop="36dp"/>
    <TextView
            android:text="@string/home_fragment_description_card_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_description_card_session"
            android:layout_marginTop="14dp"
            android:textSize="16sp"
            android:fontFamily="@font/red_hat_regular"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="@+id/textView_title_card_session"
            app:layout_constraintTop_toBottomOf="@+id/textView_title_card_session"/>
    <Button
            android:text="@string/home_fragment_button_card_session"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_card_session"
            android:layout_marginTop="40dp"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:elevation="10dp"
            android:fontFamily="@font/red_hat_regular"
            android:textColor="@color/colorDark"
            android:background="@drawable/rounded_white_button"
            app:layout_constraintTop_toBottomOf="@+id/textView_description_card_session"
            app:layout_constraintStart_toStartOf="@+id/textView_description_card_session"
    />
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/card_rectangle"
            android:id="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView_card_session"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/intersect_card"
            android:id="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/intersect_two"
            android:id="@+id/imageView6"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            android:layout_marginTop="32dp"
            android:layout_marginStart="64dp"/>
    <TextView
            android:text="@string/home_fragment_title_card_chatting"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textSize="21sp"
            android:fontFamily="@font/literata_book"
            android:textColor="@color/colorWhite"
            android:id="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/button_card_session"
            app:layout_constraintTop_toTopOf="@+id/imageView4"
            android:layout_marginTop="32dp"/>
    <TextView
            android:text="@string/home_fragment_description_card_chatting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:textSize="16sp"
            android:fontFamily="@font/red_hat_regular"
            android:textColor="@color/colorWhite"
            android:id="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8"/>
    <Button
            android:text="@string/home_fragment_button_card_chatting"
            android:layout_width="167dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_start_chat"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:fontFamily="@font/red_hat_regular"
            android:textColor="@color/colorDark"
            android:background="@drawable/rounded_white_button"
            app:layout_constraintTop_toBottomOf="@+id/textView9"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>