<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true" xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:paddingBottom="24dp">

        <ImageView
                android:id="@+id/imageView_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/home_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="32dp" />
        <TextView
                android:text="@string/profile_fragment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_title"
                android:textColor="@color/colorDark"
                android:textSize="30sp"
                android:fontFamily="@font/literata_book"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView_logo"
                android:layout_marginTop="6dp"/>

        <TextView
                android:text="@string/profile_fragment_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_description"
                android:textSize="18sp"
                android:textColor="@color/colorDescription"
                android:fontFamily="@font/red_hat_regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_title"/>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/profile_banner_one"
                android:id="@+id/imageView_card_session"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/textView_description"/>
        <TextView
                android:text="@string/home_fragment_title_card_session"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_title_card_session"
                android:textSize="21sp"
                android:fontFamily="@font/literata_book"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="56dp"
                app:layout_constraintTop_toTopOf="@+id/imageView_card_session"
                android:layout_marginTop="20dp"/>
        <TextView
                android:text="@string/home_fragment_description_card_session"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_description_card_session"
                android:layout_marginTop="4dp"
                android:textSize="16sp"
                android:fontFamily="@font/red_hat_regular"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="@+id/textView_title_card_session"
                app:layout_constraintTop_toBottomOf="@+id/textView_title_card_session"/>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/profile_baner_two"
                android:id="@+id/imageView4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView_card_session"/>


        <TextView
                android:text="@string/profile_fragment_title_two"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textSize="21sp"
                android:fontFamily="@font/literata_book"
                android:textColor="@color/colorWhite"
                android:id="@+id/textView8"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="56dp"
                app:layout_constraintTop_toTopOf="@+id/imageView4"
                android:layout_marginTop="25dp"/>
        <TextView
                android:text="@string/profile_fragment_description_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:fontFamily="@font/red_hat_regular"
                android:textColor="@color/colorWhite"
                android:id="@+id/textView9"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView8"/>


        <View android:id="@+id/view1"
              android:layout_width="match_parent"
              android:layout_height="1dp"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginTop="25dp"
              android:background="@color/colorGray"
              app:layout_constraintTop_toBottomOf="@+id/imageView4">

        </View>



        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/arrow_right"
                android:id="@+id/imageView9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/view2"
                android:layout_marginEnd="40dp"
                app:layout_constraintTop_toBottomOf="@+id/view1" />
        <TextView
                android:text="@string/profile_fragment_item_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_marginStart="8dp"
                android:textColor="@color/colorSettingsItem"
                android:textSize="16sp"
                android:fontFamily="@font/red_hat_regular"
                app:layout_constraintStart_toStartOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/view1"
                app:layout_constraintBottom_toTopOf="@+id/view2"/>

        <View  android:id="@+id/view2"
               android:layout_width="match_parent"
               android:layout_height="1dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               android:layout_marginTop="74dp"
               android:background="@color/colorGray"
               app:layout_constraintTop_toBottomOf="@+id/view1">

        </View>


        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/arrow_right"
                android:id="@+id/imageView_arrow2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/view3"
                android:layout_marginEnd="40dp"
                app:layout_constraintTop_toBottomOf="@+id/view2" />
        <TextView
                android:text="@string/profile_fragment_item_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_items2"
                android:layout_marginStart="8dp"
                android:textColor="@color/colorSettingsItem"
                android:textSize="16sp"
                android:fontFamily="@font/red_hat_regular"
                app:layout_constraintStart_toStartOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/view2"
                app:layout_constraintBottom_toTopOf="@+id/view3"/>

        <View  android:id="@+id/view3"
               android:layout_width="match_parent"
               android:layout_height="1dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               android:layout_marginTop="74dp"
               android:background="@color/colorGray"
               app:layout_constraintTop_toBottomOf="@+id/view2">

        </View>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/arrow_right"
                android:id="@+id/imageView_arrow3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/view4"
                android:layout_marginEnd="40dp"
                app:layout_constraintTop_toBottomOf="@+id/view3" />
        <TextView
                android:text="@string/profile_fragment_item_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_items3"
                android:layout_marginStart="8dp"
                android:textColor="@color/colorSettingsItem"
                android:textSize="16sp"
                android:fontFamily="@font/red_hat_regular"
                app:layout_constraintStart_toStartOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/view3"
                app:layout_constraintBottom_toTopOf="@+id/view4"/>

        <View  android:id="@+id/view4"
               android:layout_width="match_parent"
               android:layout_height="1dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               android:layout_marginTop="74dp"
               android:background="@color/colorGray"
               app:layout_constraintTop_toBottomOf="@+id/view3">

        </View>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/arrow_right"
            android:id="@+id/imageView_arrow4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/view5"
            android:layout_marginEnd="40dp"
            app:layout_constraintTop_toBottomOf="@+id/view4" />
        <TextView
                android:text="@string/profile_fragment_item_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_items4"
                android:layout_marginStart="8dp"
                android:textColor="@color/colorSettingsItem"
                android:textSize="16sp"
                android:fontFamily="@font/red_hat_regular"
                app:layout_constraintStart_toStartOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/view4"
                app:layout_constraintBottom_toTopOf="@+id/view5"/>

        <View  android:id="@+id/view5"
               android:layout_width="match_parent"
               android:layout_height="1dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               android:layout_marginTop="74dp"
               android:background="@color/colorGray"
               app:layout_constraintTop_toBottomOf="@+id/view4">

        </View>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/arrow_right"
                android:id="@+id/imageView_arrow5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/view6"
                android:layout_marginEnd="40dp"
                app:layout_constraintTop_toBottomOf="@+id/view5" />
        <TextView
                android:text="@string/profile_fragment_item_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_items5"
                android:layout_marginStart="8dp"
                android:textColor="@color/colorSettingsItem"
                android:textSize="16sp"
                android:fontFamily="@font/red_hat_regular"
                app:layout_constraintStart_toStartOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/view5"
                app:layout_constraintBottom_toTopOf="@+id/view6"/>

        <View  android:id="@+id/view6"
               android:layout_width="match_parent"
               android:layout_height="1dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               android:layout_marginTop="74dp"
               android:background="@color/colorGray"
               app:layout_constraintTop_toBottomOf="@+id/view5">

        </View>


        <TextView
                android:text="@string/profile_fragment_item_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_items6"
                android:layout_marginStart="8dp"
                android:textColor="#989795"
                android:textSize="16sp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/red_hat_regular"
                app:layout_constraintStart_toStartOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/view6"/>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_items6"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:background="@drawable/custom_border_transparent">

        <TextView
                android:text="@string/profile_fragment_logout"
                android:fontFamily="@font/red_hat_regular"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorPurple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/textView_logout"/>

    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>