<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="viewModel"
                type="org.counslrapp.ui.join_app.JoinListViewModel" />
    </data>
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground">

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1"/>

        <ImageView
                android:id="@+id/imageViewBack"
                android:src="@drawable/back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"/>

        <TextView
                android:id="@+id/textViewNext"
                android:text="@string/join_activity_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="16sp"
                android:fontFamily="@font/red_hat_regular"
                android:textColor="@color/colorGray"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="@+id/imageViewBack"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewBack"/>

        <!--<ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:mutableVisibility="@{viewModel.getLoadingVisibility()}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />-->

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/post_list"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:adapter="@{viewModel.getJoinListAdapter()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/textView_description2" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/textView6"/>
        <TextView
                android:id="@+id/textView_header"
                android:text="@string/join_activity_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:fontFamily="@font/literata_book"
                android:textColor="@color/colorDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline1"
                />

        <TextView
                android:id="@+id/textView_description"
                android:text="@string/join_activity_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorDark"
                android:textSize="16sp"
                android:gravity="center"
                android:fontFamily="@font/red_hat_regular"
                android:layout_marginStart="16sp"
                android:layout_marginEnd="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView_header"/>

        <TextView
                android:id="@+id/textView_description2"
                android:text="@string/join_activity_description2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorDark"
                android:textSize="16sp"
                android:fontFamily="@font/red_hat_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="48dp"
                app:layout_constraintTop_toBottomOf="@+id/textView_description"/>

        <TextView
                android:id="@+id/textView6"
                android:text="@string/join_activity_footer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/red_hat_regular"
                android:textStyle="bold"
                android:textColor="@color/colorDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="40dp"
                app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>